--- a/自动问答-豆包/manifest.json
+++ b/自动问答-豆包/manifest.json
@@ -1,13 +1,14 @@
 {
     "manifest_version": 3,
     "name": "自动问答-豆包",
-    "version": "1.0.0",
-    "description": "自动循环执行点击和输入操作 目标链接：https://www.doubao.com/chat/",
+    "version": "1.1.0",
+    "description": "自动循环执行点击和输入操作，并保存对话记录。目标链接：https://www.doubao.com/chat/",
     
     "permissions": [
         "activeTab",
         "scripting",
-        "storage"
+        "storage",
+        "downloads"
     ],
     
     "host_permissions": [
