feat：增加了打赏功能

--- a/自动问答-豆包/manifest.json
+++ b/自动问答-豆包/manifest.json
@@ -31,5 +31,11 @@
             "js": ["content.js"],
             "run_at": "document_idle"
         }
+    ],
+    "web_accessible_resources": [
+        {
+        "resources": ["images/*.JPG"],
+        "matches": ["<all_urls>"]
+        }
     ]
 }
