feat：增加了打赏功能

--- a/自动问答-deepseek/manifest.json
+++ b/自动问答-deepseek/manifest.json
@@ -30,5 +30,12 @@
             "js": ["content.js"],
             "run_at": "document_idle"
         }
+    ],
+    
+    "web_accessible_resources": [
+        {
+            "resources": ["images/*.JPG"],
+            "matches": ["https://chat.deepseek.com/*"]
+        }
     ]
 }
